# vibe-to-live-agents-mcp

./: README.md  docker-compose.yaml
assets/: journal.md
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: api.py  pipeline.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.node.json
frontend/.github/: copilot-instructions.md
frontend/prompts/: bootstrap.md  request.md
frontend/src/: App.css  App.tsx
frontend/src/components/: Modal.css  Modal.tsx
infra/: .gitignore  README.md  deployment-stages.tf.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/modules/container_app/: main.tf  outputs.tf  variables.tf
infra/modules/container_apps_environment/: main.tf  outputs.tf  variables.tf
infra/modules/container_registry/: main.tf  outputs.tf  variables.tf
infra/modules/docker_build_push/: main.tf  outputs.tf  variables.tf
infra/modules/key_vault/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/managed_identity/: main.tf  outputs.tf  variables.tf
